# Yoki

./: .gitignore  CMakeLists.txt  README.md  Yoki_Report_20250614_202551.html  Yoki_Report_20250614_202652.html  test_column_order.html  test_wrap_behavior.html
.cache/clangd/index/: AArch64SVEACLETypes.def.B8A8113726B0334F.idx  ADL.h.7F451F18AF8988CB.idx  APFixedPoint.h.AB2267418ADCF9BB.idx  APFloat.h.135BFA67D825AA88.idx  APINotesOptions.h.B5818AB165F9DCCC.idx  APInt.h.45453B755B5D8B76.idx  APNumericStorage.h.92A05D7287CD2D13.idx  APSInt.h.6722B21B5F5A92D1.idx  APValue.h.F6C052A5696B1B25.idx  ASTBitCodes.h.0894B0DCF26D5956.idx  ASTConcept.h.F74CF7B3BA499BA0.idx  ASTConsumer.h.675F23E370522399.idx  ASTContext.h.38BDBD6855F3502E.idx  ASTContextAllocate.h.68CBC5140C4CCE06.idx  ASTDumperUtils.h.A0B705A986F8236F.idx  ASTFwd.h.E2CE435BB15EC30B.idx  ASTUnit.h.8A03CDE07EE74689.idx  ASTUnresolvedSet.h.CDDB761F46EC36A4.idx  ASTVector.h.8C6FB38036E237C6.idx  AddressSanitizerOptions.h.C2069D07BD024D1E.idx  AddressSpaces.h.23A42685467B0E07.idx  AlignOf.h.74FF0302FAEC5032.idx  Alignment.h.AB5E275B59EA1D6F.idx  Allocator.h.FAE55DFD1F780B1C.idx  AllocatorBase.h.A19EDE2944CE8C82.idx  Analyses.def.08A944C8BE07CCD7.idx  AnalysisDeclContext.h.CA55799B41CEA6D7.idx  AnalyzerOptions.def.8B78C6862A77D344.idx  AnalyzerOptions.h.4A1F50DBB5B1CB1E.idx  ArgumentsAdjusters.h.A07050D102315185.idx  ArrayRef.h.A34F958894109254.idx  AtomicOrdering.h.F1E27159F8CC4A22.idx  Attr.h.CBB5FCC7E62EDFA3.idx  AttrIterator.h.DB62E45FE334216A.idx  AttrKinds.h.0E7F6B1A83DDF3ED.idx  AttrList.inc.8869546AB4D90543.idx  AttrParsedAttrList.inc.0FC12E036456509B.idx  AttrSubMatchRulesList.inc.40B6E51E0CE5F5AB.idx  AttrSubjectMatchRules.h.0FE4A7237C127404.idx  AttrVisitor.inc.B9B4DF83C7322867.idx  (+297 more)
cmake/: generate_includes.cmake
config_template/: README.md  config.json
report_template/: README.md  report_template.html
resources/report_template/: README.md  report_template.html
src/: CMakeLists.txt  main.cpp
src/analyse/: Analyse.cpp  Analyse.h  CMakeLists.txt
src/analysis/: Analysis.cpp  Analysis.h  CMakeLists.txt
src/ast_traverse/: CMakeLists.txt
src/ast_traverse/ast_consumer/: CMakeLists.txt  SastDogASTConsumer.cpp  SastDogASTConsumer.h  YokiASTConsumer.cpp  YokiASTConsumer.h  YokiStaticScanASTConsumer.cpp  YokiStaticScanASTConsumer.h  YokiUTGenerationASTConsumer.cpp  YokiUTGenerationASTConsumer.h
src/ast_traverse/ast_frontend_action/: CMakeLists.txt  SastDogASTFrontendAction.cpp  SastDogASTFrontendAction.h  YokiASTFrontendAction.cpp  YokiASTFrontendAction.h
src/ast_traverse/ast_visitor/: CMakeLists.txt  SastDogASTVisitor.cpp  SastDogASTVisitor.h  YokiASTVisitor.cpp  YokiASTVisitor.h  YokiStaticScanASTVisitor.cpp  YokiStaticScanASTVisitor.h  YokiUTGenerationASTViositor.cpp  YokiUTGenerationASTViositor.h  YokiUTGenerationASTVisitor.cpp  YokiUTGenerationASTVisitor.h
src/checker/: CMakeLists.txt
src/checker/checker_base/: CMakeLists.txt  CheckerBase.h
src/checker/checker_utils/: CMakeLists.txt  CheckerUtils.cpp  CheckerUtils.h
src/checker/compliance/: CMakeLists.txt  misra_cpp_2023.h  misra_cpp_2023.inc
src/checker/compliance/misra_cpp2023/: CMakeLists.txt  misra_cpp2023.inc
src/checker/compliance/misra_cpp2023/MISRA_CPP2023_Rule_9_6_1/: CMakeLists.txt  MISRA_CPP2023_Rule_9_6_1.cpp  MISRA_CPP2023_Rule_9_6_1.h
src/checker/compliance/misra_cpp_2023/: CMakeLists.txt  CmakeLists.txt
src/checker/compliance/misra_cpp_2023/MISRA_CPP2023_Rule_9_6_1/: CMakeLists.txt  MISRA_CPP2023_Rule_9_6_1.cpp  MISRA_CPP2023_Rule_9_6_1.h
src/checker/compliance/misra_cpp_2023/Rule_9_6_1/: Rule_9_6_1.cpp  Rule_9_6_1.h
src/checker/core/: CMakeLists.txt
src/checker/utils/: CMakeLists.txt  Utils.cpp
src/checker_manager/: CMakeLists.txt  CheckerManager.cpp  CheckerManager.h
src/checker_manager/helper/: CMakeLists.txt  CheckerBase.cpp  CheckerBase.h  CheckerItem.h
src/common/: CMakeLists.txt  Config.cpp  ConfigNode.cpp  ConfigNode.h  Utils.hpp  checkers.inc  visit_node.inc
src/config/: CMakeLists.txt  Config.h  YokiConfig.cpp  YokiConfig.h
src/consumer/: CMakeLists.txt  SastDogASTConsumer.cpp  SastDogASTConsumer.h
src/defect/: CMakeLists.txt  Defect.cpp  Defect.h  DefectManager.cpp  DefectManager.h
src/defect_manager/: CMakeLists.txt  DefectManager.cpp  DefectManager.h
src/frontend_action/: CMakeLists.txt  SastDogASTFrontendAction.cpp  SastDogASTFrontendAction.h
src/function_decl_node/: CMakeLists.txt  FunctionDeclNode.cpp  FunctionDeclNode.h
src/handler/: CMakeLists.txt  Handler.cpp  Handler.h
src/rule_manager/: CMakeLists.txt
src/sast_config/: CMakeLists.txt  SastConfig.cpp  SastConfig.h
src/thread_pool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
src/ut_generation/: CMakeLists.txt  FunctionDeclManager.cpp  FunctionDeclManager.h  README.md
src/ut_generator/: CMakeLists.txt  UTGenerator.cpp  UTGenerator.h
src/utils/: ASTDumperUtils.cpp  ASTDumperUtils.h  CMakeLists.txt  Utils.cpp  Utils.h
src/visitor/: CMakeLists.txt  SastDogASTVisitor.cpp  SastDogASTVisitor.h
test/: main.cpp  test.cpp
test/no_goto/: CMakeLists.txt  f3_function.cpp  f3_function.h  main.cpp  test_f3.cpp
